k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-processing-service
spec:
  selector:
    app: log-processing-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
